# TAuth

./: .gitignore  .prettierrc  LICENSE  README.md  SECURITY.md  bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish-bun.yml
src/: Router.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/data/: container.encrypted
src-tauri/src/: driver.rs  lib.rs  main.rs  vault.rs
src/assets/: App.css
src/components/features/: AddCredential.tsx  CredentialCard.tsx  Icon.tsx  Navbar.tsx
src/components/ui/: input.tsx  textarea.tsx
src/context/: VaultContext.tsx
src/features/manager/components/: AddCredential.tsx  CredentialCard.tsx  DeleteConfirmDialog.tsx  EditCredential.tsx  Settings.tsx
src/features/shared/components/: Icon.tsx  Navbar.tsx
src/pages/: Login.tsx  Manager.tsx  Register.tsx
src/services/: Session.ts
src/types/: global.d.ts
