[package]
name = "tauth"
version = "0.1.3"
description = "A TOTP and password manager written using Tauri"
authors = ["SystemVll"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauth"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
aes-gcm = "0.10.3"
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
libreauth = "0.18.1"
uuid = { version = "1.14.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
memsec = "0.7.0"
