[package]
name = "tauth"
version = "0.1.4"
description = "A TOTP and password manager written using Tauri"
authors = ["SystemVll"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauth"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
serde_json = "1.0.149"
aes-gcm = "0.10.3"
libreauth = "0.18.1"
uuid = { version = "1.20.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
memsec = "0.7.0"
